// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests should run arguments 1`] = `[Function]`;

exports[`tests should run arguments 2`] = `2`;

exports[`tests should run arguments 3`] = `3`;

exports[`tests should run arguments 4`] = `undefined`;

exports[`tests should run arguments 5`] = `undefined`;

exports[`tests should run arrays 1`] = `Array []`;

exports[`tests should run arrays 2`] = `Array []`;

exports[`tests should run arrays 3`] = `
Array [
  9000,
]
`;

exports[`tests should run arrays 4`] = `
Array [
  "hello node",
]
`;

exports[`tests should run async 1`] = `55`;

exports[`tests should run classes 1`] = `User {}`;

exports[`tests should run errors 1`] = `[Function]`;

exports[`tests should run errors 2`] = `[Function]`;

exports[`tests should run event emitter 1`] = `
Object {
  "a": 1,
  "b": Object {
    "c": Array [
      2,
      3,
      Object {
        "d": "4",
      },
    ],
  },
}
`;

exports[`tests should run event emitter 2`] = `
Object {
  "a": 1,
  "b": Object {
    "c": Array [
      2,
      3,
      Object {
        "d": "4",
      },
    ],
  },
}
`;

exports[`tests should run event emitter 3`] = `
Object {
  "a": 1,
  "b": Object {
    "c": Array [
      2,
      3,
      Object {
        "d": "4",
      },
    ],
  },
}
`;

exports[`tests should run fibonacci-task 1`] = `"55"`;

exports[`tests should run fibonacci-task 2`] = `"55"`;

exports[`tests should run functions 1`] = `undefined`;

exports[`tests should run functions 2`] = `12`;

exports[`tests should run functions 3`] = `1970`;

exports[`tests should run functions 4`] = `[Function]`;

exports[`tests should run hello world 1`] = `"hello world!"`;

exports[`tests should run json 1`] = `"Hello, should run john!"`;

exports[`tests should run modules 1`] = `[Function]`;

exports[`tests should run modules 2`] = `[Function]`;

exports[`tests should run modules 3`] = `"baz"`;

exports[`tests should run objects 1`] = `
Object {
  "myNumberProperty": 1234,
  "myStringProperty": "baz",
}
`;

exports[`tests should run primitives 1`] = `undefined`;

exports[`tests should run share binary data 1`] = `
Float32Array [
  0,
  0,
]
`;
